--- a/views/Ques.hbs
+++ b/views/Ques.hbs
@@ -12,19 +12,19 @@
               <h2 class="questions">Question Option</h2>
             </li>
             <li>
-              <input class="answers" type="radio" name="answers" id="options1" />
+              <input class="answers" type="radio" name="answers" id="option1" />
               <label for="options1" id="ans1"> Answer Option</label>
             </li>
             <li>
-              <input class="answers" type="radio" name="answers" id="options2" />
+              <input class="answers" type="radio" name="answers" id="option2" />
               <label for="options2" id="ans2"> Answer Option</label>
             </li>
             <li>
-              <input class="answers" type="radio" name="answers" id="options3" />
+              <input class="answers" type="radio" name="answers" id="option3" />
               <label for="options3" id="ans3">Answer Option</label>
             </li>
             <li>
-              <input class="answers" type="radio" name="answers" id="options4" />
+              <input class="answers" type="radio" name="answers" id="option4" />
               <label for="options4" id="ans4">Answer Option</label>
             </li>
           </ul>
