--- a/Math Sci Quiz/css/style.css
+++ b/Math Sci Quiz/css/style.css
@@ -68,3 +68,21 @@ margin: 10px;
     font-weight: bold;
     color: azure;
 }
+.message{
+    font-size: x-large;
+    font-weight: bolder;
+    border-radius: 5vh; 
+}
+.counter{
+    color: red;
+    border: 4px solid black;
+    width: fit-content;
+    border-radius: 3vh;
+    padding: 1rem 5rem;
+}
+.try_again a{
+    float: right;
+    color: black;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-decoration: none;
+}
