--- a/views/partials/manu.hbs
+++ b/views/partials/manu.hbs
@@ -10,31 +10,31 @@
     </li>
    
     <li class="nav-item" role="presentation">
-        <a href="#tab5Id" id="option3"class="nav-link font" data-bs-toggle="tab"> Manu Option</a>
+        <a href="#tab5Id" onclick="Algebral()" id="option3"class="nav-link font" data-bs-toggle="tab"> Manu Option</a>
     </li>
     <li class="nav-item" role="presentation">
-        <a href="#" class="nav-link font "id="option4" data-bs-toggle="tab">Manu Option</a>
+        <a href="#"onclick="linear()" class="nav-link font "id="option4" data-bs-toggle="tab">Manu Option</a>
     </li>
     <li class="nav-item" role="presentation">
-        <a href="#" class="nav-link font"id="option5" data-bs-toggle="tab">Manu Option</a>
+        <a href="#"onclick="varation()" class="nav-link font"id="option5" data-bs-toggle="tab">Manu Option</a>
     </li>
     <li class="nav-item" role="presentation">
-        <a href="#" class="nav-link font"id="option6" data-bs-toggle="tab">Manu Option</a>
+        <a href="#"onclick="series()" class="nav-link font"id="option6" data-bs-toggle="tab">Manu Option</a>
     </li>
     <li class="nav-item" role="presentation">
-        <a href="#" class="nav-link font"id="option7" data-bs-toggle="tab">Manu Option</a>
+        <a href="#"onclick="stars()" class="nav-link font"id="option7" data-bs-toggle="tab">Manu Option</a>
     </li>
     <li class="nav-item" role="presentation">
-        <a href="#" class="nav-link font"id="option8" data-bs-toggle="tab">Manu Option</a>
+        <a href="#"onclick="mens()" class="nav-link font"id="option8" data-bs-toggle="tab">Manu Option</a>
     </li>
     <li class="nav-item" role="presentation">
-        <a href="#" class="nav-link font"id="option9" data-bs-toggle="tab">Manu Option</a>
+        <a href="#" onclick="trig()" class="nav-link font"id="option9" data-bs-toggle="tab">Manu Option</a>
     </li>
     <li class="nav-item" role="presentation">
-        <a href="#" class="nav-link font"id="option10" data-bs-toggle="tab">Manu Option</a>
+        <a href="#"onclick="percent()" class="nav-link font"id="option10" data-bs-toggle="tab">Manu Option</a>
     </li>
     <li class="nav-item" role="presentation">
-        <a href="#" class="nav-link font"id="option11" data-bs-toggle="tab">Manu Option</a>
+        <a href="#" onclick="rigid()"class="nav-link font"id="option11" data-bs-toggle="tab">Manu Option</a>
     </li>
 </ul>
 </div>
